--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <div class="container">
+ 
+    <div class="container-fluid">
+           <div id="root"></div>
     </div>
 
 
